src/objects/wbsendit__Smart_Email_Recipient__c.object
<CustomObject>
    <fields>
        <fullName>wbsendit__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Is_Child_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Child Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wbsendit__Is_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wbsendit__Object_Names__c</fullName>
        <label>Object Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email__c</fullName>
        <label>Smart Email</label>
        <referenceTo>wbsendit__Smart_Email__c</referenceTo>
        <relationshipLabel>Smart Email Recipients</relationshipLabel>
        <relationshipName>Smart_Email_Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>wbsendit__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>BCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Value__c</fullName>
        <label>Value</label>
        <type>Email</type>
    </fields>
    <label>Smart Email Recipient</label>
    <nameField>
        <displayFormat>SER-{0}</displayFormat>
        <label>Smart Email Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Smart Email Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>